# Pet_project_2021

./: .gitignore  file_one.txt  pyproject.toml
app/: app.py
app/react-flask-app/: package-lock.json  package.json
app/react-flask-app/api/: api.py
resc/: demo.py
